# yanxu-platform

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  言序.toml  言序.toml.in
.github/workflows/: ci.yml  release.yml
api/: api-v1.json  error-codes-v1.json  native-abi-v2.json  protocol-contract-v1.json
docs/: ACCESSIBILITY_PROTOCOL.md  ADR-001-platform-backend.md  ADR-002-rendering-strategy.md  ADR-003-text-format.md  ADR-004-yanju-json-compatibility.md  API.md  ARCHITECTURE.md  ARTIFACT_PROVENANCE.md  BACKEND_GUIDE.md  COMPATIBILITY.md  DRAW_PROTOCOL.md  ERROR_CODES_1_0.md  EVENT_PROTOCOL.md  MIGRATION_0_X_TO_1_0.md  NATIVE_ABI_V2.md  PACKAGING.md  PERFORMANCE_BUDGET.md  PLATFORM_API.md  PROTOCOL_CONTRACT_1_0.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_0.6.0.md  RELEASE_NOTES_0.7.0.md  RELEASE_NOTES_0.8.0.md  RELEASE_NOTES_0.9.0.md  RELEASE_NOTES_1.0.0.md  RESOURCE_LIFETIME.md  SECURITY.md  TEXT_AND_IME.md  THIRD_PARTY.md  THREADING_MODEL.md
examples/: 最小窗口.yx  言序.toml
native/: Cargo.toml
native/examples/: performance_budget.rs
native/src/: abi.rs  accessibility.rs  backend.rs  bridge.rs  contract_snapshot.rs  data.rs  draw.rs  error_snapshot.rs  event.rs  lib.rs  model.rs  native_accessibility.rs  protocol.rs  protocol_snapshot.rs  render.rs  sync.rs  text.rs  windowing.rs
native/tests/: abi_value_corpus.rs  draw_protocol_corpus.rs  event_queue_soak.rs  resource_lifecycle_soak.rs
native/tests/corpus/: README.md  draw-v1-malformed.tsv
scripts/: prepare-current.sh  verify-release-source.sh
src/: 主.yx
tests/: 平台包装.yx  言序.toml
