[package]
name = "yanxu-platform-native"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Yanxu ABI v2 native desktop platform primitives"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arboard = { version = "=3.6.1", default-features = false }
cosmic-text = { version = "=0.14.2", default-features = true }
image = { version = "=0.25.10", default-features = false, features = ["jpeg", "png"] }
rfd = { version = "=0.17.2", default-features = false, features = ["xdg-portal", "wayland"] }
softbuffer = { version = "=0.4.8", default-features = false, features = ["x11", "x11-dlopen", "wayland", "wayland-dlopen"] }
tiny-skia = { version = "=0.11.4", default-features = false, features = ["std", "simd"] }
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen"] }

[target.'cfg(target_os = "windows")'.dependencies]
rfd = { version = "=0.17.2", default-features = false, features = ["common-controls-v6"] }

[lints]
workspace = true
